--- a/src/pages/WeatherByHours/weatherByHours.css
+++ b/src/pages/WeatherByHours/weatherByHours.css
@@ -1,31 +1,31 @@
 .forecast-container {
-    display: flex;
-    grid-auto-flow: row;
-    margin: 0 -8px;
-    padding-top: 25px;
-    
-  }
-  
-  .hour-card {
-    background-color: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 2);
-    flex: 0 0 auto;
-    margin: 0 8px;
-    min-width: 80px;
-    text-align: center;
-    padding: 10px;
-    
-  }
-  
-  .hour {
-    font-weight: bold;
-    font-size: 16px;
-    margin-bottom: 5px;
-  }
-  
-  .temperature {
-    font-size: 14px;
-    color: #555555;
-  }
-  
+  display: flex;
+  grid-auto-flow: row;
+  margin: 0 -8px;
+  padding-top: 25px;
+  overflow-x: scroll;
+  /* width: 100%; */
+  white-space: nowrap;
+}
+
+.hour-card {
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 2);
+  flex: 0 0 auto;
+  margin: 0 8px;
+  min-width: 80px;
+  text-align: center;
+  padding: 10px;
+}
+
+.hour {
+  font-weight: bold;
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+.temperature {
+  font-size: 14px;
+  color: #555555;
+}
